fixed cells collapsing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -295,7 +295,6 @@ main {
 }
 
 .flagged {
-  content: "";
   background-image: url(../../img/flag.svg);
   background-color: $inactiveCell;
 }
